# rbc-rs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: game.rs
examples/: quickstart.rs  rbc_960.rs
src/: attack_tables.rs  game.rs  lib.rs  position.rs  types.rs
tests/: conformance.rs  opera_game.rs  sense_grants.rs  sense_reveal.rs  sense_shapes.rs  sense_visibility.rs  variants.rs
