[package]
name = "reconchess-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reconnaissance Blind Chess game logic for Rust"
repository = "https://github.com/ywzvennu/reconchess-rs"
readme = "README.md"
keywords = ["chess", "reconchess", "rbc", "game"]
categories = ["game-development"]

[dependencies]
cozy-chess = "0.3.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
