[package]
name = "rbc-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["ywzvennu"]
description = "Reconnaissance Blind Chess game logic for Rust"
repository = "https://github.com/ywzvennu/rbc-rs"
documentation = "https://docs.rs/rbc-rs"
readme = "README.md"
keywords = ["chess", "rbc", "reconchess", "game"]
categories = ["game-development"]
exclude = [
    ".github/",
]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
chess-startpos-rs = "0.1"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "game"
harness = false
